--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1529,7 +1529,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('PythonData')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
